fixed team member images being cut off on teams page

--- a/_sass/pages/_page-teams.scss
+++ b/_sass/pages/_page-teams.scss
@@ -5,13 +5,15 @@
     flex-wrap: wrap;
     flex-direction: row;
     .team-image {
-      height: 60px;
-      width: 60px;
+      height: 90px !important;
+      width: 90px !important;
       margin-right: 10px;
       border-radius: 50%;
       overflow: hidden;
       img {
-        width: 60px;
+        width:100%;
+        height: 100%;
+        object-fit: cover;
       }
     }
     .team-meta {
